app/src/main/java/com/example/vicollector/core/error/ImuException.kt
package com.example.vicollector.core.error

class ImuException(
    message: String,
    cause: Throwable? = null,
) : CaptureException(message, cause)
